# ChangeLog for dev-libs/openssl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.577 2014/08/07 18:12:48 jer Exp $

  07 Aug 2014; Jeroen Roovers <jer@gentoo.org> openssl-1.0.1h-r2.ebuild:
  Stable for HPPA (bug #512012).

*openssl-0.9.8z_p2 (07 Aug 2014)

  07 Aug 2014; Mike Frysinger <vapier@gentoo.org> +openssl-0.9.8z_p2.ebuild:
  Version bump.

*openssl-1.0.1i (07 Aug 2014)

  07 Aug 2014; Mike Frysinger <vapier@gentoo.org> +openssl-1.0.1i.ebuild:
  Version bump.

  05 Aug 2014; Markus Meier <maekke@gentoo.org> openssl-1.0.1h-r2.ebuild:
  arm stable, bug #512012

  31 Jul 2014; Tobias Klausmann <klausman@gentoo.org> openssl-1.0.1h-r2.ebuild:
  Stable on alpha, bug #515234

  31 Jul 2014; Mike Frysinger <vapier@gentoo.org> openssl-0.9.8z_p1-r1.ebuild,
  openssl-0.9.8z_p1-r2.ebuild:
  Clean up bad code style for computing PLEVEL #515898 by Greg Turner.

  29 Jul 2014; Sergey Popov <pinkbyte@gentoo.org> -openssl-1.0.0j.ebuild:
  Drop old vulnerable version

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
  openssl-1.0.1h-r2.ebuild:
  Stable for ppc, wrt bug #512012

  26 Jul 2014; Michał Górny <mgorny@gentoo.org> openssl-1.0.1h-r3.ebuild:
  Add a note not to stabilize -r3.

*openssl-1.0.1h-r3 (25 Jul 2014)

  25 Jul 2014; Michał Górny <mgorny@gentoo.org> +openssl-1.0.1h-r3.ebuild:
  Revbump to force fix for bug #509792.

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> openssl-0.9.8z_p1-r2.ebuild,
  openssl-1.0.1h-r2.ebuild:
  Stable for x86, wrt bug #512012

*openssl-1.0.2_beta2 (23 Jul 2014)

  23 Jul 2014; Lars Wendler <polynomial-c@gentoo.org>
  -openssl-1.0.2_beta1-r2.ebuild, -openssl-1.0.2_beta1-r3.ebuild,
  +openssl-1.0.2_beta2.ebuild, -files/openssl-1.0.2-ipv6.patch,
  -files/openssl-1.0.2_beta1-perl-5.18.patch,
  +files/openssl-1.0.2_beta2-ipv6.patch,
  +files/openssl-1.0.2_beta2-revert-alpha-perl-generation.patch: