@@ -10,25 +10,15 @@ AUX openssl-1.0.1-x32.patch 3273 SHA256 a4f05b8757e225a05a9c5a3ea485159066760d87
 AUX openssl-1.0.1e-s_client-verify.patch 592 SHA256 6f540fce663eefbe68cee16ad7d8d561d6c898eeb4180c2f4a4caa7e43c6d0c9 SHA512 117b1017e1259667078d3ccdcd9fd46357c6f85cf2702794f49c612b37acdc044fe88f871dbe46fcad9ed4cd8aaaaee800dddb5286203322802efd7549a43b68 WHIRLPOOL 70a4cc36b1dcb24d7e9bcef016684fb2394977f7f20aa332ebd0aa15e3f4c16c74563d2fc0ba8d70669f6cc9a13bf8a30cdb28ebafe2d102cd2859a4e32c38d7
 AUX openssl-1.0.1f-revert-alpha-perl-generation.patch 3102 SHA256 6e502275b32ac0eca80f28448ae1bb88506f9135258f420fd857ea0b9b485778 SHA512 c80439da3d268e70fd492d0ca73c0a17ddb088b9330610794a338d1921ee13dad9caca4c81ca103b82a7541c8712f77e51f352ec1b1b02789d9aed291acb0cdc WHIRLPOOL cb760366c8759b1c78c5307134bb48c4fc12b1556276c2ef55455ea54725d20cb433ade966a7453f512d2feb5ae89a9798078ab535e4605366633a8e003c7ac6
 AUX openssl-1.0.1h-ipv6.patch 18675 SHA256 4ccbabad8c6b3e6710d54beb56322cddb79a55222198466843bb101fb4b4e4c6 SHA512 fc54a6e1afc4c395b0318bc264a31fa5e26add1106c61650aa9d2027a783d5d2390d223bae858149bc460e00114008577d30c6f45fccf43fbf9ab1019bcb7d25 WHIRLPOOL 539e101f8d5f53f266793880ea0cf197f246fbccdea22b802a51cf8f85ed2a3a172525c5c8796f3b457f3a0b84654db633a0df9d297c02491da40055036f9594
-DIST openssl-1.0.1i.tar.gz 4422117 SHA256 3c179f46ca77069a6a0bac70212a9b3b838b2f66129cb52d568837fc79d8fcc7 SHA512 6cbcdcec8568236e8f20f0461f93df8a193a0ad88102ff548443e6ec87e2a7f649e314beee1e6bafda693934b4fb142244b61d14bf736828dda09e277b941d93 WHIRLPOOL 4baefe8a203243d08c2ca4dc9e1019a539135604a8ddfb09b9a7f2711108ad6ebd45eef1cfa09331f19fe57defbe7e1390f9ac2de086437a484c5819cabb5a4a
+DIST openssl-1.0.1k.tar.gz 4434910 SHA256 8f9faeaebad088e772f4ef5e38252d472be4d878c6b3a2718c10a4fcebe7a41c SHA512 8b000fbd1bf919d9913a314f99aedd48a69f6caa4ccf43237889e73e08cbe0d82bfc27e9c7c4cade09fc459f91d6c4a831a9b3fc8bca0344fb864eadd7d1e8e8 WHIRLPOOL 5236a966d610c971e473cfc30e5412a72eef116fd259ada9c50da08bcd4ca967f80bb19babf530b4e5b9f1f24e9275e00391eb2e12a26d4544f593e2b4ba20b8
 DIST openssl-c_rehash.sh.1.7 4167 SHA256 4999ee79892f52bd6a4a7baba9fac62262454d573bbffd72685d3aae9e48cee0 SHA512 55e8c2e827750a4f375cb83c86bfe2d166c01ffa5d7e9b16657b72b38b747c8985dd2c98f854c911dfbbee2ff3e92aff39fdf089d979b2e3534b7685ee8b80da WHIRLPOOL c88f06a3b8651f76b6289552cccceb64e13f6697c5f0ce3ff114c781ce1c218912b8ee308af9d087cd76a9600fdacda1953175bff07d7d3eb21b0c0b7f4f1ce1
-EBUILD openssl-1.0.1i.ebuild 8273 SHA256 f5903d691fe2cdda5fec15f810181c795af9cb1105ab22b675d623c9235a0c88 SHA512 4e9548653db5582782729812b6b1a0349113ae216c30d1ce6f51fd011732684c636411d77a0a0200ce22c5aaeaff2c2f0eca016ee702fea29ff558304f1e9dbb WHIRLPOOL 861727c63c1ee3ce74069408a2d67f304664139158abeb06a55f118c78112e3c129fa6c6281383c9942268ba50f4ce2f0003d4489a7efff2012f851f37ebd5f8
-MISC ChangeLog 88272 SHA256 595fb0db8f4cbf24e3a63e7881ce12f86244f9df6ac5be160fbf2c99e82fd3ca SHA512 661677a725987dc4b376a7e864d11701b988e891a7f82e765096ec62f5303b9b829660f31100793c9af40df47705c32b7596078fc211b216d7c86f2215716ecf WHIRLPOOL 88d7ecf13647e2a34c223b73d7f5525378befb12d75abeaebc4b163c76a795077949322af644ab4330ef6ddf2488c757e6a2b071f7551fa833c6be791bf46e74
+EBUILD openssl-1.0.1k.ebuild 8586 SHA256 b6ae736b1cf64c2ff702e73c975ceb1ff97dbc6a374de8a34a73dee9fbbab794 SHA512 2855bf41bccc82a54664218851ed22f017da8d2a352b6a338028be1a234fb32d339d154c51dcc304f05c9bdb0cdd229d97c6c815b9924feef2afc68b7e9765ca WHIRLPOOL 8f5d06b614baac742b3c9a966951c3d55696b39194c29fe5592d688939fcd0936ba979a802c84fcc411fb694283a6b34e853293f07e9c8760d07ac0032abc157
+MISC ChangeLog 88466 SHA256 b489b9f92a2907ba6ad58f36fc7e55f9a4e4840505ef8ed6b28b82ea50d1aa74 SHA512 34615d9aca110d311852e84c2d9b523ca27a17328d3c332d70d11d1fe263b8438476439ee52fd226fa284fb3cffd7fd462ad26715d8ddb59ae19cf6f392cb5d1 WHIRLPOOL 2c66edd214a04d7df8cb7eec27f24bbe6075345a2e4c73abbf9929ca260f3799d90f647bf10345dc26313a2ade40297a218bee7093be00a753a47db49a335119
 MISC metadata.xml 562 SHA256 5c61e2a07ffdb4ba157e0add7f84ff74458c890092d5e6980fd936dfdb457c34 SHA512 f83769af7ffd223923b72a62db27cbc80ca31925b95b720845b6bedd2a9b52837f70f9da93ee43e272ceb3c8424a8c9f35a31ebd5274bc04c91cd63ace1af844 WHIRLPOOL d98f2af2cf3e13c09ad526a2fe06fe8ef02e1db20fd4e3843f1793a97c9ae6a2897308c84038a9a37d6d68fadc7af6d913b980f4f079dac36ea3860a33aca8c2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT6kj+AAoJEDuWpXgki9wH9wsQAKJbBpccoJ8m8yke3iVpWnK5
-CNphfEgdoBEOEM9liTHaoYhorg/HP2Fm+OLqB1qH10HokOFVL/TkcMIk7IBCEmdX
-7+Hhap1minzIaM0LxjFUVlO4S0OvRHzDyV2NR7xhciagdCumnHd+k2JbgsNB3g2N
-qqAvY+K7MHzKDs9nnSrNL4xm8JESmyqwmkxbkbgWcrMxqWw1KxOpuXXemOa2g1Za
-6LPrAxmCWr2s74wOkikxEIshf56nRZBQXnycuAXlscGaRA8QUvsD+nPyfFYS/fd7
-0uEppFFFabcdmyCs2jnUTWSRjhnX8AG2MGwEfz88hBGELS+z+q6ScPLy7mcUodTx
-4fiL+nCuICv7MHDTIAe8zvgIspFn0irJcqSLrM/J0qEWryZrIKdi+JXQbbZbwuEc
-/xqrRWVY1q89I8yqOe6MuQC5NQ6s9twKtmN1IlA1L8pT1EAqwc3YJV/CoeuIMBCg
-n0fzGCkjxLMjwDPpwPKDIgYTPsRs8/vvEYp9WYGJXL2TyijqNDL/lznHel/ofUpS
-Fggp4S6FsQTyhqGUEHx04cNSI+ArEhR3bIOlH0POS0lxWuOiF+HKPh56tFc5qmqD
-EZNYPeHPKK0eNzuLKCWNrfW2q66k9q+kvd3CAFtxwFbo9zjLs1BhNDkaG8Uax+Wi
-5o/KwWCN/mZbhmngfqwD
-=fcBN
+iF4EARYIAAYFAlSyrj0ACgkQz9oPmzWWQiLRAwEAwCoWdPxF+GdpWTMeE4d4DAFy
+Bgat5bSOB2rjWVzwWaABAEX/FnyjlWeXV6pt7wgECQv+d/0XtbNoRTL0DFlpWJMF
+=X0NH
 -----END PGP SIGNATURE-----
