@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/openssl
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-libs/openssl/ChangeLog,v 1.577 2014/08/07 18:12:48 jer Exp $
+
+*openssl-1.0.1k (11 Jan 2015)
+
+  11 Jan 2015; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +openssl-1.0.1k.ebuild, -openssl-1.0.1i.ebuild:
+  Update openssl fix to latest ebuild for 1.0.1k.
 
   07 Aug 2014; Jeroen Roovers <jer@gentoo.org> openssl-1.0.1h-r2.ebuild:
   Stable for HPPA (bug #512012).
